postgres_kube_persistantvolume_statefullset.yaml
# StatefulSet Definition -- has to be stateful and not deployment as it needs to maintain state
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
spec:
    serviceName: postgres
    replicas: 1
    selector:
        matchLabels:
          app: postgres
    template:
        metadata:
          labels:
              app: postgres
        spec:
          containers:
              - name: postgres
                image: postgres:14
                ports:
                  - containerPort: 5432
                    name: postgres
                    protocol: TCP
                volumeMounts:
                - name: postgres-persistent-storage
                  mountPath: /var/lib/postgresql/data
