frontend_kube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
    role: service
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
