orthanc_kube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orthanc-service
spec:
  selector:
    app: orthanc
  ports:
  - protocol: TCP
    port: 8026
    targetPort: 8026
  - protocol: TCP
    port: 4026
    targetPort: 4026
